--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -905,6 +905,11 @@ label[id="38_SHA"] + .content {
   text-overflow: ellipsis;
 }
 
+.gw-logo img {
+  border-radius: 5px;
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.25);
+}
+
   /* //////////////////////////
  // Preferences
 ////////////////////////// */
