--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1491,6 +1491,7 @@ body._fhot {
 ._fhot .event .buttons {
   font-size: 13px;
 }
+._fhot .event .buttons > #btnResolveAndClose + #btnSubmit,
 ._fhot .event .buttons > button {
   background: #f5f5f5;
   background: linear-gradient(#f5f5f5, #e7e6e6);
