Only make "Assign to Me" button show up when ticket is not assigned to you

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -2876,3 +2876,7 @@ section.case nav .controls>.control.save .icon:before {
   display: inline-block;
   margin-right: 4px;
 }
+
+._fbh_atm ._fbh_atm_same ._fbh_atm_button {
+  display: none;
+}
