--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -1497,7 +1497,7 @@ body._fhot {
   background: linear-gradient(#f5f5f5, #e7e6e6);
   border: 1px solid #aaa;
   border-radius: 3px;
-  color: #444;
+  color: #444 !important;
   font-size: 13px;
   font-weight: bold;
   height: 25px;
