--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -493,7 +493,7 @@ img {
 .cms figure {
 	display: inline-block;
 	vertical-align: top;
-	padding: .5em;
+	padding: 0 .5em .5em .5em;
 }
 
 .cms figure img {
@@ -501,10 +501,9 @@ img {
 }
 
 .cms figcaption {
-	border-top: 1px solid #ccc;
-	margin-top: .5em;
+	border-bottom: 1px solid #ccc;
 	margin-bottom: .5em;
-	padding-top: .5em;
+	padding-bottom: .5em;
 }
 
 .cms li:hover {
