--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,13 @@
 		{% include js/script.js %}
 	</script>
 
+	{% for javascript in page.custom-javascript-list %}
+		<script src="{{ javascript }}"></script>
+	{% endfor %}
+
+	{% for css in page.custom-css-list %}
+		<link rel="stylesheet" href="{{ css }}"></script>
+	{% endfor %}
 <!-- script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
