Adding screenshots to features
Sorting feature order on doc page, styling tweaks

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -533,8 +533,8 @@ img {
 }
 
 .thumb.collapsed img {
-	max-width: 200px;
-	height: auto;
+	max-height: 300px;
+	width: auto;
 	box-sizing: inherit;
 }
 
