--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -325,7 +325,7 @@
 .jira-helper-reverse-comments [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(4) > span:nth-child(3)  {
   display: flex;
   flex-direction: column-reverse;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 
   /* //////////////////////////
@@ -442,4 +442,58 @@
   animation-timing-function: ease-in;
   z-index: 10000;
   animation-delay: 5s;
+}
+
+  /* //////////////////////////
+ // Re-order ticket sections
+////////////////////////// */
+
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div {
+  max-width: 47%;
+}
+
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:empty {
+  display: none;
+}
+
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(1) {
+  width: 100%;
+  max-width: none;
+}
+
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(2) {
+  width: 100%;
+  max-width: none;
+}
+
+/* Spacer */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(3) {}
+
+/* Sub tasks */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(4) {}
+
+/* Spacer */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(5) {}
+
+/* Linked issues */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(6) {}
+
+/* Spacer */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(7) {}
+
+/* Web Links */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(3) > div:nth-of-type(8) {
+  display: none;
+}
+
+/* Comments */
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:last-of-type {
+  margin-top: 40px;
 }
