--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -338,7 +338,7 @@
 }
 
 /* Show all our statuses in the dropdown */
-.jira-helper-new-ticket-tweaks [data-test-id="issue.views.issue-base.foundation.status.status-field-wrapper"] > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(1) {
+.jira-helper-new-ticket-tweaks [data-test-id="issue.views.issue-base.foundation.status.status-field-wrapper"] > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(1) {
   max-height: 440px !important;
 }
 
@@ -441,7 +441,7 @@
   animation-duration: 5s;
   animation-timing-function: ease-in;
   z-index: 10000;
-  animation-delay: 5s;
+  animation-delay: 7s;
 }
 
   /* //////////////////////////
